--- a/admin-service/templates/cancer_types_list.html
+++ b/admin-service/templates/cancer_types_list.html
@@ -67,9 +67,8 @@
                         Cancer Type
                         <span class="sort-icon" data-column="name"></span>
                     </th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100" onclick="sortTable('description')">
+                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                         Description
-                        <span class="sort-icon" data-column="description"></span>
                     </th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Subtypes</th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
