--- a/admin-service/templates/base.html
+++ b/admin-service/templates/base.html
@@ -162,5 +162,8 @@
     </script>
 
     {% block extra_scripts %}{% endblock %}
+    
+    <!-- Token refresh handler -->
+    <script src="{% static 'js/token-refresh.js' %}"></script>
 </body>
 </html>
