--- a/patient-service/templates/base.html
+++ b/patient-service/templates/base.html
@@ -138,5 +138,8 @@
     </script>
 
     {% block extra_scripts %}{% endblock %}
+    
+    <!-- Token refresh handler -->
+    <script src="{% static 'js/token-refresh.js' %}"></script>
 </body>
 </html>
