circular dependencies removed....

--- a/patient-service/templates/patient_profile_edit.html
+++ b/patient-service/templates/patient_profile_edit.html
@@ -219,7 +219,7 @@ async function handleSubmit(event) {
         address: document.getElementById('address').value,
         emergency_contact_name: document.getElementById('emergency_contact_name').value,
         emergency_contact_phone: document.getElementById('emergency_contact_phone').value,
-        preferred_language: document.getElementById('preferred_language').value
+        preferred_language_id: document.getElementById('preferred_language').value
     };
 
     try {
